--- a/src/notes/typescript/01.md
+++ b/src/notes/typescript/01.md
@@ -11,6 +11,10 @@
 
 ```bash
  npm install -g typescript
+ npm i typescript -g
+ tsc --init
+ "dev": "tsc -watch -p ./",
+ npm run dev
 ```
 
 2. 构建你的第一个 TypeScript 文件 `greeter.ts`
@@ -74,7 +78,7 @@ TypeScript 支持基于类的面向对象编程。
 ```typescript
 class Student {
   fullName: string;
-  constructor(public firstName, public middleInitial, public lastName) {
+  constructor(public firstName:string, public middleInitial:string, public lastName:string) {
     this.fullName = firstName + " " + middleInitial + " " + lastName;
   }
 }
