--- a/src/notes/vue/04.md
+++ b/src/notes/vue/04.md
@@ -1,629 +1,274 @@
-:::snippet 样式主题
+:::snippet 计算属性
 
-1. scss 可以 `$` 来定义变量,将基础变量提取到`variable.scss`
+1. 计算属性是基于它们的依赖进行缓存的。
+2. 只在相关依赖发生改变时它们才会重新求值。
 
-```scss
-$--color--primary: #2e74ff !default;
-$--color--success: #46c83a !default;
-$--color--danger: #f54757 !default;
-$--color--warning: #f9ba03 !default;
-$--color--white: #ffffff !default;
-$--color--black: #000000 !default;
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="example">
+  <p>Original message: "{{ message }}"</p>
+  <p>Computed reversed message: "{{ reversedMessage }}"</p>
+</div>
 ```
-
-2. 将按钮风格主题也提取配置
-
-```scss
-$--button-color: #ffffff !default;
-$--button-backgroud-color: transparent !default;
-$--button-border-radius: 4px !default;
-```
-
-3. 按钮的使用变量替换原有样式
-
-```scss
-@import "../../style/variable.scss";
-
-.hv-button {
-  transition: all 0.2s ease;
-  padding: 10px;
-  border: 0;
-  border-radius: $--button-border-radius;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  color: $--button-color;
-  box-sizing: border-box;
-  background-color: $--button-backgroud-color;
-  outline: none;
-
-  &:disabled {
-    opacity: 0.5;
-    cursor: default;
-    pointer-events: none;
-  }
-}
-
-.hv-button--text {
-  position: relative;
-  height: 16px;
-  display: inline-block;
-  transition: all 0.3s ease;
-}
-
-.hv-button--type-fill {
-  &.hv-button--color-primary {
-    background-color: $--color--primary;
-    &:hover {
-      box-shadow: 0px 9px 20px -9px $--color--primary;
-    }
-  }
-  &.hv-button--color-success {
-    background-color: $--color--success;
-    &:hover {
-      box-shadow: 0px 9px 20px -9px $--color--success;
-    }
-  }
-  &.hv-button--color-danger {
-    background-color: $--color--danger;
-    &:hover {
-      box-shadow: 0px 9px 20px -9px $--color--danger;
-    }
-  }
-  &.hv-button--color-warning {
-    background-color: $--color--warning;
-    &:hover {
-      box-shadow: 0px 9px 20px -9px $--color--warning;
-    }
-  }
-}
-
-.hv-button--type-border {
-  padding: 9px;
-  &.hv-button--color-primary {
-    border: 1px solid $--color--primary;
-    color: $--color--primary;
-    &:hover {
-      background-color: mix($--color--white, $--color--primary, 90%);
-    }
-  }
-  &.hv-button--color-success {
-    border: 1px solid $--color--success;
-    color: $--color--success;
-    &:hover {
-      background-color: mix($--color--white, $--color--success, 90%);
-    }
-  }
-  &.hv-button--color-danger {
-    border: 1px solid $--color--danger;
-    color: $--color--danger;
-    &:hover {
-      background-color: mix($--color--white, $--color--danger, 90%);
-    }
-  }
-  &.hv-button--color-warning {
-    border: 1px solid $--color--warning;
-    color: $--color--warning;
-    &:hover {
-      background-color: mix($--color--white, $--color--warning, 90%);
-    }
-  }
-}
-
-.hv-button--type-flat {
-  &.hv-button--color-primary {
-    color: $--color--primary;
-    &:hover {
-      background-color: mix($--color--white, $--color--primary, 90%);
-    }
-  }
-  &.hv-button--color-success {
-    color: $--color--success;
-    &:hover {
-      background-color: mix($--color--white, $--color--success, 90%);
-    }
-  }
-  &.hv-button--color-danger {
-    color: $--color--danger;
-    &:hover {
-      background-color: mix($--color--danger, $--color--danger, 90%);
-    }
-  }
-  &.hv-button--color-warning {
-    color: $--color--warning;
-    &:hover {
-      background-color: mix($--color--white, $--color--warning, 90%);
-    }
-  }
-}
-
-.hv-button--icon-default {
-  width: 36px;
-  height: 36px;
-}
-.hv-button--icon-left > i {
-  margin-right: 5px;
-}
-.hv-button--icon-right > i {
-  margin-left: 5px;
-}
-.hv-button--circle {
-  border-radius: 18px;
-}
-.hv-button--size-large {
-  font-size: 16px;
-  padding: 13px;
-
-  &.hv-button--circle {
-    border-radius: 22px;
-  }
-}
-.hv-button--size-small {
-  padding: 6px 8px;
-  &.hv-button--circle {
-    border-radius: 14px;
-  }
-}
-```
-
-4. 主题定制，创建 theme.scss
-
-```scss
-$--color-primary: #5b3cc4;
-@import "hv-web-ui/packages/index.scss";
-```
-
-5. 引入样式
 
 ```javascript
-import Vue from "vue";
-import HvWebComponents from "hv-web-ui";
-import "./theme.scss";
-Vue.use(HvWebComponents);
+//计算属性 reversedMessage。我们提供的函数将用作属性 vm.reversedMessage 的 getter 函数：
+let vm = new Vue({
+  el: "#example",
+  data: {
+    message: "Hello"
+  },
+  computed: {
+    // 计算属性的 getter
+    reversedMessage: function() {
+      //`this`指向 vm 实例
+      return this.message
+        .split("")
+        .reverse()
+        .join("");
+    }
+  }
+});
+console.log(vm.reversedMessage); // => 'olleH'
+vm.message = "Goodbye";
+console.log(vm.reversedMessage); // => 'eybdooG'
 ```
 
 :::
 
-:::snippet 复选框
+:::snippet 计算属性缓存`vs`方法
 
-1. vue 直接绑定 v-model 的值为 Boolean,选中状态 true 选中 false 未选中
+1. 计算属性只在相关依赖发生改变时它们才会重新求值。
+2. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
 
 ```html
-<input type="checkbox" v-model="checked" />
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app">
+  <p>Original Message：{{message}}</p>
+  <p>Computer Reverse Message：{{reversedMessage}}</p>
+  <p>reversedFun：{{reversedFun()}}</p>
+</div>
 ```
 
-2. 多个复选框设置 value 在绑定 v-model 为数组 Array，值选中就会添加到数组中
-
-```html
-<input type="checkbox" id="jack" value="Jack" v-model="checkedNames" />
-<input type="checkbox" id="john" value="John" v-model="checkedNames" />
-<input type="checkbox" id="mike" value="Mike" v-model="checkedNames" />
-```
-
-3. 根据 v-model 的绑定值类型进行组件包装,computed 可以拆分成 get 和 set 方法来进行 v-model 绑定，根据 value 类型处理选中状态
-
-```html
-<template>
-  <label
-    :class="['hv-checkbox',
-    {'hv-checkbox--checked':model},
-    {'hv-checkbox--disabled':disabled}]"
-  >
-    <span class="hv-checkbox--check">
-      <span class="hv-checkbox--check-inner"></span>
-      <input
-        type="checkbox"
-        v-model="model"
-        :disabled="disabled"
-        @change="handleValueChange"
-      />
-    </span>
-    <span class="hv-checkbox--text" v-if="$slots.default">
-      <slot></slot>
-    </span>
-  </label>
-</template>
-<script>
-  export default {
-    name: "HvCheckbox",
-    componentName: "HvCheckbox",
-    computed: {
-      model: {
-        get() {
-          return this.value;
-        },
-        set(value) {
-          this.$emit("input", value);
-        }
-      }
-    },
-    props: {
-      value: Boolean,
-      disabled: Boolean
-    },
-    methods: {
-      handleValueChange(event) {
-        const value = event.target.checked;
-        this.$emit("change", value, event);
-      }
+```javascript
+let indexComputed = 0;
+let indexMethod = 0;
+let app = new Vue({
+  el: "#app",
+  data: {
+    message: "Hello"
+  },
+  computed: {
+    reversedMessage: function() {
+      indexComputed++;
+      return (
+        this.message
+          .split("")
+          .reverse()
+          .join("") +
+        " indexComputed:" +
+        indexComputed
+      );
     }
-  };
-</script>
+  },
+  methods: {
+    reversedFun: function() {
+      indexMethod++;
+      return (
+        this.message
+          .split("")
+          .reverse()
+          .join("") +
+        " indexMethod:" +
+        indexMethod
+      );
+    }
+  }
+});
+console.log(app.reversedMessage); // olleH indexComputed:1
+console.log(app.reversedFun()); // olleH indexMethod:2
+app.message = "message";
+console.log(app.reversedMessage); //egassem indexComputed2
+console.log(app.reversedFun()); //egassem indexMethod3
 ```
-
-4. 复选框样式
-
-```scss
-@import "../../style/variable.scss";
-
-.hv-checkbox {
-  position: relative;
-  font-size: 14px;
-  cursor: pointer;
-  display: inline-block;
-  white-space: nowrap;
-  user-select: none;
-}
-
-.hv-checkbox--check {
-  white-space: nowrap;
-  cursor: pointer;
-  outline: none;
-  display: inline-block;
-  line-height: 1;
-  position: relative;
-  vertical-align: middle;
-
-  > input {
-    display: none;
-  }
-}
-
-.hv-checkbox--check-inner {
-  border: $--checkbox-border;
-  background-color: $--checkbox-background-color;
-  display: inline-block;
-  position: relative;
-  border-radius: $--checkbox-border-radius;
-  box-sizing: border-box;
-  width: 18px;
-  height: 18px;
-  z-index: 1;
-  transition: all 0.3s;
-
-  &::after {
-    border: $--checkbox-tick-border;
-    box-sizing: content-box;
-    content: "";
-    border-left: 0;
-    border-top: 0;
-    height: 8px;
-    left: 5px;
-    position: absolute;
-    top: 1px;
-    width: 5px;
-    transition: all 0.05s;
-    transform-origin: center;
-    transform: rotate(0) scaleY(0);
-  }
-}
-.hv-checkbox--text {
-  display: inline-block;
-  padding-left: 10px;
-  line-height: 20px;
-}
-.hv-checkbox--checked {
-  .hv-checkbox--check-inner {
-    background-color: $--color--primary;
-    border-color: $--color--primary;
-  }
-  .hv-checkbox--check-inner::after {
-    transform: rotate(45deg) scaleY(1);
-  }
-}
-.hv-checkbox--disabled {
-  opacity: 0.5;
-  pointer-events: none;
-}
-```
-
-5. 效果查看 [https://huang7000.github.io/hv-web-ui/#/checkbox](https://huang7000.github.io/hv-web-ui/#/checkbox)
 
 :::
 
-:::snippet 复选框组
-
-1. 复选框实现了 Boolean 类型基本的 v-model，可能多个复选框绑定到一个数组，将绑定同个数组的放到 HvCheckboxGroup 组件内
-
-```html
-<template>
-  <div class="hv-checkbox-group">
-    <slot></slot>
-  </div>
-</template>
-<script>
-  export default {
-    name: "HvCheckboxGroup",
-    componentName: "HvCheckboxGroup",
-    props: {
-      value: {
-        type: Array,
-        default: []
-      },
-      disabled: Boolean
-    }
-  };
-</script>
-```
-
-2. 复选框根据是否在 HvCheckboxGroup 中进行判断，计算属性 model 的 get、set 进行对应不同的数据处理
+:::snippet 计算属性`vs`侦听属性
+更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
 
 ```html
-<template>
-  <label
-    :class="['hv-checkbox',
-    {'hv-checkbox--checked':model},
-    {'hv-checkbox--disabled':isDisabled}]"
-  >
-    <span class="hv-checkbox--check">
-      <span class="hv-checkbox--check-inner"></span>
-      <input
-        type="checkbox"
-        v-model="model"
-        :value="value"
-        :disabled="isDisabled"
-        @change="handleValueChange"
-      />
-    </span>
-    <span class="hv-checkbox--text" v-if="$slots.default">
-      <slot></slot>
-    </span>
-  </label>
-</template>
-<script>
-  export default {
-    name: "HvCheckbox",
-    componentName: "HvCheckbox",
-    data() {
-      return {
-        checkboxGroup: null
-      };
-    },
-    computed: {
-      hvCheckboxGroup() {
-        if (this.checkboxGroup) return this.checkboxGroup;
-        let parent = this.$parent;
-        while (parent) {
-          if (parent.$options.componentName !== "HvCheckboxGroup") {
-            parent = parent.$parent;
-          } else {
-            this.checkboxGroup = parent;
-            return this.checkboxGroup;
-          }
-        }
-      },
-      model: {
-        get() {
-          if ({}.toString.call(this.value) === "[object Boolean]") {
-            return this.value;
-          }
-          if (!this.hvCheckboxGroup) return this.value;
-          return this.hvCheckboxGroup.value.includes(this.value);
-        },
-        set(value) {
-          if (!this.hvCheckboxGroup) {
-            this.$emit("input", value);
-            return;
-          }
-          let checkValue = this.hvCheckboxGroup.value;
-          const index = checkValue.findIndex(v => v == this.value);
-          if (index > -1) {
-            checkValue.splice(index, 1);
-          } else {
-            checkValue.push(this.value);
-          }
-          this.hvCheckboxGroup.$emit("input", checkValue);
-        }
-      },
-      isDisabled() {
-        if (this.hvCheckboxGroup) {
-          return this.hvCheckboxGroup.disabled || this.disabled;
-        }
-        return this.disabled;
-      }
-    },
-    props: {
-      value: [Boolean, Number, String],
-      disabled: Boolean
-    },
-    methods: {
-      handleValueChange(event) {
-        const value = event.target.checked;
-        this.$emit("change", value, event);
-      }
-    }
-  };
-</script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-2">
+  <p>firstName：{{firstName}}</p>
+  <p>lastName：{{lastName}}</p>
+  <p>fullName：{{fullName}}</p>
+  <p>xingming:{{xingming}}</p>
+</div>
 ```
 
-3. 效果查看 [https://huang7000.github.io/hv-web-ui/#/checkbox](https://huang7000.github.io/hv-web-ui/#/checkbox)
+```javascript
+let indexComputed = 0;
+let indexWatch = 0;
+let app2 = new Vue({
+  el: "#app-2",
+  data: {
+    firstName: "7000",
+    lastName: "huang",
+    quanming: "Foo Bar"
+  },
+  watch: {
+    firstName: function(val) {
+      indexWatch++;
+      console.log("执行" + indexWatch + "次watch的firstName");
+      this.quanming = val + " " + this.lastName;
+    },
+    lastName: function(val) {
+      indexWatch++;
+      console.log("执行" + indexWatch + "次watch的lastName");
+      this.quanming = this.firstName + " " + val;
+    }
+  },
+  computed: {
+    fullName: function() {
+      indexComputed++;
+      console.log("执行" + indexComputed + "次computed的fullName");
+      return this.firstName + " " + this.lastName;
+    }
+  }
+});
+console.log(app2.fullName); // 7000 huang
+console.log(app2.firstName); // 7000
+console.log(app2.lastName); // huang
+app2.firstName = "xiqian";
+console.log(app2.fullName); //xiqian huang
+console.log(app2.firstName); // xiqian
+console.log(app2.lastName); // huang
+```
 
 :::
 
-:::snippet 单选框
-
-1. 单选框基本与复选框实现类似，不同的是单选框多个一起使用所以必须使用 HvRadioGroup，在组件中设置 provide
+:::snippet 计算属性的`setter`和`getter`
 
 ```html
-<template>
-  <div class="hv-radio-group">
-    <slot></slot>
-  </div>
-</template>
-<script>
-  export default {
-    name: "HvRadioGroup",
-    componentName: "HvRadioGroup",
-    provide() {
-      return { hvRadioGroup: this };
-    },
-    props: {
-      value: {
-        type: [Number, String],
-        required: true
-      },
-      disabled: Boolean
-    }
-  };
-</script>
-<style>
-  .hv-radio-group {
-    font-size: 0;
-  }
-</style>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-3">
+  <p>firstName：{{firstName}}</p>
+  <p>lastName：{{lastName}}</p>
+  <p>fullName：{{fullName}}</p>
+</div>
 ```
 
-2. 子组件 HvRadio 中 inject 依赖注入 HvRadioGroup 在通过 computed 拆分详细的 get 和 set 来取值和赋值
-
-```html
-<template>
-  <label
-    :class="['hv-radio',{'hv-radio--checked':model===value},{'hv-radio--disabled':isDisabled}]"
-  >
-    <span class="hv-radio--check">
-      <span class="hv-radio--check-inner"></span>
-      <input type="radio" v-model="model" :value="value" />
-    </span>
-    <span class="hv-radio--text" v-if="$slots.default">
-      <slot></slot>
-    </span>
-  </label>
-</template>
-
-<script>
-  export default {
-    name: "HvRadio",
-    componentName: "HvRadio",
-    inject: ["hvRadioGroup"],
-    props: {
-      value: {
-        type: [Number, String],
-        required: true
-      },
-      disabled: Boolean
+```javascript
+let indexGet = 0;
+let indexSet = 0;
+let indexfirstName = 0;
+let indexlastName = 0;
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    firstName: "7000",
+    lastName: "huang",
+    quanming: "Foo Bar"
+  },
+  watch: {
+    firstName: function(val) {
+      indexfirstName++;
+      console.log("执行" + indexfirstName + "次dd的wwatch的firstName");
+      this.quanming = val + " " + this.lastName;
     },
-    computed: {
-      model: {
-        get() {
-          return this.hvRadioGroup.value;
-        },
-        set(value) {
-          this.hvRadioGroup.$emit("input", value);
-        }
+    lastName: function(val) {
+      indexlastName++;
+      console.log("执行" + indexlastName + "次dd的watch的lastName");
+      this.quanming = this.firstName + " " + val;
+    }
+  },
+  computed: {
+    fullName: {
+      // getter
+      get: function() {
+        indexGet++;
+        console.log("执行" + indexGet + "次dd的computed的fullName的get");
+        return this.firstName + " " + this.lastName;
       },
-      isDisabled() {
-        if (this.hvRadioGroup) {
-          return this.hvRadioGroup.disabled || this.disabled;
-        }
-        return this.disabled;
+      // setter
+      set: function(newValue) {
+        indexSet++;
+        console.log("执行" + indexSet + "次dd的computed的fullName的set");
+        var names = newValue.split(" ");
+        this.firstName = names[0];
+        this.lastName = names[names.length - 1];
       }
     }
-  };
-</script>
+  }
+});
+console.log(app3.fullName); // 7000 huang
+console.log(app3.firstName); // 7000
+console.log(app3.lastName); // huang
+app3.fullName = "huang xiqian";
 ```
-
-3. 样式设置
-
-```scss
-@import "../../style/variable.scss";
-
-.hv-radio {
-  position: relative;
-  font-size: 14px;
-  display: inline-block;
-  white-space: nowrap;
-  user-select: none;
-  cursor: pointer;
-}
-
-.hv-radio + .hv-radio {
-  margin-left: 15px;
-}
-
-.hv-radio--check {
-  white-space: nowrap;
-  cursor: pointer;
-  outline: none;
-  display: inline-block;
-  line-height: 1;
-  position: relative;
-  vertical-align: middle;
-
-  > input {
-    display: none;
-  }
-}
-
-.hv-radio--check-inner {
-  border: $--radio-border;
-  background-color: $--radio-background-color;
-  display: inline-block;
-  position: relative;
-  border-radius: 50%;
-  box-sizing: border-box;
-  width: 18px;
-  height: 18px;
-  z-index: 1;
-  transition: all 0.3s;
-
-  &::after {
-    position: absolute;
-    content: "";
-    top: 4px;
-    left: 4px;
-    width: 8px;
-    height: 8px;
-    background-color: $--color--primary;
-    border-top: 0;
-    border-left: 0;
-    border-radius: 50%;
-    opacity: 0;
-    transform: scale(0);
-    transition: all 0.2s;
-  }
-}
-
-.hv-radio--text {
-  display: inline-block;
-  padding-left: 10px;
-  line-height: 20px;
-}
-
-.hv-radio--checked {
-  .hv-radio--check-inner {
-    border-color: $--color--primary;
-  }
-
-  .hv-radio--check-inner::after {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-.hv-radio--disabled {
-  opacity: 0.5;
-  pointer-events: none;
-}
-```
-
-4. 效果查看 [https://huang7000.github.io/hv-web-ui/#/radio](https://huang7000.github.io/hv-web-ui/#/radio)
 
 :::
 
-:::snippet 代码下载
+:::snippet 侦听器
+在这个示例中，使用`watch`选项允许我们执行异步操作 (访问一个`API`)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
 
-项目地址：[https://github.com/huang7000/hv-web-ui](https://github.com/huang7000/hv-web-ui)
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- 因为 AJAX 库和通用工具的生态已经相当丰富，Vue 核心代码没有重复 -->
+<!-- 提供这些功能以保持精简。这也可以让你自由选择自己更熟悉的工具。 -->
+<script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
+<div id="watch-example">
+  <p>
+    Ask a yes/no question:
+    <input v-model="question" />
+  </p>
+  <p>{{ answer }}</p>
+</div>
+```
 
-当前版本：[https://github.com/huang7000/hv-web-ui/releases/tag/v0.2.1](https://github.com/huang7000/hv-web-ui/releases/tag/v0.2.1)
+```javascript
+let watchExampleVM = new Vue({
+  el: "#watch-example",
+  data: {
+    question: "",
+    answer: "I cannot give you an answer until you ask a question!"
+  },
+  watch: {
+    // 如果`question`发生改变，这个函数就会运行
+    question: function(newQuestion, oldQuestion) {
+      this.answer = "Waiting for you to stop typing...";
+      this.debouncedGetAnswer();
+    }
+  },
+  created: function() {
+    //`_.debounce`是一个通过 Lodash 限制操作频率的函数。
+    // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
+    // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
+    //`_.debounce`函数 (及其近亲`_.throttle`) 的知识，
+    // 请参考：https://lodash.com/docs#debounce
+    this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
+  },
+  methods: {
+    getAnswer: function() {
+      if (this.question.indexOf("?") === -1) {
+        this.answer = "Questions usually contain a question mark. ;-)";
+        return;
+      }
+      this.answer = "Thinking...";
+      var vm = this;
+      axios
+        .get("https://yesno.wtf/api")
+        .then(function(response) {
+          vm.answer = _.capitalize(response.data.answer);
+        })
+        .catch(function(error) {
+          vm.answer = "Error! Could not reach the API. " + error;
+        });
+    }
+  }
+});
+```
 
 :::
