--- a/src/notes/typescript/03.md
+++ b/src/notes/typescript/03.md
@@ -1,269 +1,131 @@
-:::snippet 接口 Interface
+:::snippet 变量声明
 
-1. 基本类型接口
+1. var (作用域问题)
 
 ```typescript
-interface IInterface {
-  // 通用属性
-  label: string;
-  // 可选属性
-  width?: number;
-  // 只读属性
-  readonly name: string;
-  // 定义函数
-  readName(): string;
-}
+var a = 10;
+//var声明时，它不在乎你声明多少次；你只会得到1个。
+var a = true;
 ```
 
-2. 函数类型定义
+2. let (拥有块级作用域的变量的另一个特点是，它们不能在被声明之前读或写。)
 
 ```typescript
-interface SearchFunc {
-  (source: string, subString: string): boolean;
-}
-let search: SearchFunc = function(source: string, subString: string) {
-  let result = source.search(subString);
-  if (result == -1) {
-    return false;
-  } else {
-    return true;
-  }
-};
+let hello = "Hello!";
+let hello = 123456; // 错误，不能在1个作用域里多次声明`x`
 ```
 
-3. 索引类型定义
+3. const (拥有与 let 相同的作用域规则，但是不能对它们重新赋值。)
 
 ```typescript
-interface StringArray {
-  [index: number]: string;
-}
-let myArray: StringArray = ["Bob", "Fred"];
-let myStr: string = myArray[0];
-```
-
-```typescript
-interface NumberDictionary {
-  [index: string]: number;
-  length: number;
-}
-```
-
-> 定义索引类型还定义其他属性必须保证其他属性的类型与索引对应的值相同
-
-4. 实现接口
-
-```typescript
-class interfaceBaseClass implements IInterface {
-  label = "labelValue";
-  width = 100;
-  name = "interface";
-  readName() {
-    return this.name;
-  }
-  propKey = "propValiue";
-}
-```
-
-5. 接口参数限定
-
-```typescript
-let interfaceFunc = (params: IInterface): void => {};
-```
-
-6. 扩展接口
-
-```typescript
-interface Shape {
-  color: string;
-}
-interface PenStroke {
-  penWidth: number;
-}
-interface Square extends Shape, PenStroke {
-  sideLength: number;
-}
-```
-
-7. 混合类型
-
-```typescript
-interface Counter {
-  (start: number): string;
-  interval: number;
-  reset(): void;
-}
-function getCounter(): Counter {
-  let counter = <Counter>function(start: number) {};
-  counter.interval = 123;
-  counter.reset = function() {};
-  return counter;
-}
-let c = getCounter();
-c(10);
-c.reset();
-c.interval = 5.0;
+const numLivesForCat = 9;
+numLivesForCat = 5; // 错误，
 ```
 
 :::
 
-:::snippet 类 Class
+:::snippet 解构
 
-1. 基本定义
-
-```typescript
-class Greeter {
-  greeting: string;
-  constructor(message: string) {
-    this.greeting = message;
-  }
-  greet() {
-    return "Hello, " + this.greeting;
-  }
-}
-let greeter = new Greeter("world");
-```
-
-2. 继承
+1. 解构数组
 
 ```typescript
-class Animal {
-  name: string;
-  constructor(theName: string) {
-    this.name = theName;
-  }
-  move(distanceInMeters: number = 0) {
-    console.log(`${this.name} moved ${distanceInMeters}m.`);
-  }
+let input = [1, 2];
+let [first, second] = input;
+console.log(first); // outputs 1
+console.log(second); // outputs 2
+// 解构作用于已声明的变量会更好：
+[first, second] = [second, first]; //first 2,second 1
+function f([first, second]: [number, number]) {
+  console.log(first);
+  console.log(second);
 }
-class Snake extends Animal {
-  constructor(name: string) {
-    super(name);
-  }
-  move(distanceInMeters = 5) {
-    console.log("Slithering...");
-    super.move(distanceInMeters);
-  }
+f(input);
+//数组里使用...语法创建剩余变量：
+let [firstNum, ...rest] = [1, 2, 3, 4];
+console.log(firstNum); // outputs 1
+console.log(rest); // outputs [ 2, 3, 4 ]
+{
+  let [first] = [1, 2, 3, 4];
+  console.log(first); // outputs 1
 }
-class Horse extends Animal {
-  constructor(name: string) {
-    super(name);
-  }
-  move(distanceInMeters = 45) {
-    console.log("Galloping...");
-    super.move(distanceInMeters);
-  }
-}
-let sam = new Snake("Sammy the Python");
-let tom: Animal = new Horse("Tommy the Palomino");
-sam.move();
-tom.move(34);
-```
-
-3. 修饰符
-
-```typescript
-class Human {
-  public name: string;
-  private age: number;
-  protected money: string;
+{
+  let [, second, , fourth] = [1, 2, 3, 4];
 }
 ```
 
-| 修饰符    | 描述               |
-| :-------- | :----------------- |
-| public    | 任意位置都可以访问 |
-| private   | 当前类中可以访问   |
-| protected | 当前类和子类可访问 |
-
-4. 只读属性
+2. 对象解构：
 
 ```typescript
-class Octopus {
-  readonly name: string;
-  private readonly numberOfLegs: number = 8;
-  constructor(theName: string) {
-    this.name = theName;
-  }
+let o = {
+  a: "foo",
+  b: 12,
+  c: "bar",
+};
+let { a, b } = o;
+({ a, b } = { a: "baz", b: 101 }); //a baz b 101
+//在对象里使用...语法创建剩余变量：
+{
+  let { a, ...passthrough } = o;
+  let total = passthrough.b + passthrough.c.length;
 }
+//属性重命名
+let { a: newName1, b: newName2 } = o; //等同 let newName1 = o.a; let newName2 = o.b;
+//指定它的类型
+{
+  let { a, b }: { a: string; b: number } = o;
+}
+//默认值
+function save(obj: { a: string, b?: number }) {
+    let { a, b = 1001 } = obj;
+}
+
 ```
 
-> readonly 设置只读可以放置在访问修饰符前面多重限定
-
-5. 存取器
+3. 解构也能用于函数声明。 看以下简单的情况
 
 ```typescript
-class Employee {
-  private _fullName: string;
-  get fullName(): string {
-    return this._fullName;
-  }
-  set fullName(newName: string) {
-    this._fullName = newName;
-  }
+//解构也能用于函数声明。 看以下简单的情况
+type C = { a: string, b?: number }
+function f({ a, b }: C): void {
+    // ...
 }
-let employee = new Employee();
-employee.fullName = "Bob Smith";
-alert(employee.fullName);
-```
 
-6. 静态属性
-
-```typescript
-class Grid {
-  static origin = { x: 0, y: 0 };
+//通常情况下更多的是指定默认值
+function ff({ a, b = 0 } = { a: "" }): void {
+    // ...
 }
-console.log(Grid.origin);
+ff({ a: "yes" }); // ok, default b = 0
+ff(); // ok, default to {a: ""}, which then defaults b = 0
+ff({}); // error, 'a' is required if you supply an argument
 ```
-
-7. 抽象类
-
-```typescript
-abstract class Department {
-  constructor(public name: string) {}
-  printName(): void {
-    console.log("Department name: " + this.name);
-  }
-  abstract printMeeting(): void; // 必须在派生类中实现
-}
-```
-
-> 只能被集成不能被实例化
 
 :::
 
-:::snippet 泛型
+:::snippet 展开
 
-1. 泛型类
-
-```typescript
-class GenericNumber<T> {
-  zeroValue: T;
-  add: (x: T, y: T) => T;
-}
-let myGenericNumber = new GenericNumber<number>();
-myGenericNumber.zeroValue = 0;
-myGenericNumber.add = function(x, y) {
-  return x + y;
-};
-```
-
-2. 泛型约束
+1. 解构也能用于函数声明。 看以下简单的情况
 
 ```typescript
-interface Lengthwise {
-  length: number;
-}
-function loggingIdentity<T extends Lengthwise>(arg: T): T {
-  return arg;
-}
-```
+//一个数组展开为另一个数组
+let first = [1, 2];
+let second = [3, 4];
+let bothPlus = [0, ...first, ...second, 5];//bothPlus的值为[0, 1, 2, 3, 4, 5]
+//一个对象展开为另一个对象
+//注意：意味着出现在展开对象后面的属性会覆盖前面的属性。
+//首先，它仅包含对象 自身的可枚举属性。(你会丢失其方法)
+//TypeScript编译器不允许展开泛型函数上的类型参数。
+let defaults = { food: "spicy", price: "$$", ambiance: "noisy" };
+let search = { ...defaults, food: "rich" };//search的值为{ food: "rich", price: "$$", ambiance: "noisy" }。
 
-3. 泛型构造函数
-
-```typescript
-function create<T>(c: { new (): T }): T {
-  return new c();
+class C {
+  p = 12;
+  m() {
+  }
 }
+let c = new C();
+let clone = { ...c };
+clone.p; // ok
+clone.m(); // error!
 ```
 
 :::
