--- a/src/notes/vue/01.md
+++ b/src/notes/vue/01.md
@@ -1,162 +1,208 @@
-:::snippet Vue 环境搭建
+:::snippet `Vue.js`引用
 
-1. 安装 Vue CLI
+1. `Vue`是一套用于构建用户界面的渐进式框架。
+2. `Vue`被设计为可以自底向上逐层应用。
+3. `Vue`的核心库只关注视图层。
 
-```bash
-npm install -g @vue/cli
+```html
+<!-- 开发环境版本，包含了有帮助的命令行警告 -->
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- 生产环境版本，优化了尺寸和速度 -->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 ```
 
-2. 启动 vue ui 可视化操作
+:::
 
-```bash
-vue ui
+:::snippet 声明式渲染
+`Vue.js`的核心是一个允许采用简洁的模板语法来声明式地将数据渲染进`DOM`的系统
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app">
+  {{ message }}
+</div>
+<div id="app-2">
+  <span v-bind:title="message">
+    鼠标悬停几秒钟查看此处动态绑定的提示信息！
+  </span>
+</div>
 ```
-
-![初始化](../../assets/images/vue-01-01.png)
-
-3. 创建项目
-
-![创建项目](../../assets/images/vue-01-02.png)
-
-4. 项目配置
-
-![项目配置](../../assets/images/vue-01-03.png)
-
-5. 运行环境
-
-![运行环境](../../assets/images/vue-01-04.png)
-
-6. 安装依赖
-
-![安装依赖](../../assets/images/vue-01-05.png)
-
-7. 完成安装
-
-![完成安装](../../assets/images/vue-01-06.png)
-
-8. 启动项目
-
-![启动项目](../../assets/images/vue-01-07.png)
-
-9. 在线访问
-
-![在线访问](../../assets/images/vue-01-08.png)
-
-10. 项目根目录创建 `vue.config.js` ，github 部署在线访问需要配置项目路径,与 github 项目名称一致
 
 ```javascript
-module.exports = {
-  publicPath: "hv-web-ui"
-};
+// app div的内容是Hello Vue!
+let app = new Vue({
+  el: "#app",
+  data: {
+    message: "Hello Vue!"
+  }
+});
+//app-2 div的鼠标放上去会显示页面加载于+当前时间
+let app2 = new Vue({
+  el: "#app-2",
+  data: {
+    message: "页面加载于 " + new Date().toLocaleString()
+  }
+});
 ```
 
 :::
 
-:::snippet Github 创建项目
+:::snippet 条件与循环
 
-1. [https://github.com/new](https://github.com/new) 创建项目
+`v-if`指令控制切换一个元素是否显示
 
-![github创建项目](../../assets/images/vue-01-09.png)
-
-2. 将 vue 项目提交到 github 创建的组件库
-
-3. [https://github.com/settings/tokens](https://github.com/settings/tokens) 生成 token 用于授权你访问
-
-![GITHUB_TOKEN](../../assets/images/vue-01-10.png)
-
-4. 记录 GITHUB_TOKEN 用于自动构建授权访问提交构建后代码
-
-:::
-
-:::snippet NPM 注册授权
-
-1. 注册 npm 账号
-2. [https://www.npmjs.com/settings/huang7000/tokens](https://www.npmjs.com/settings/huang7000/tokens) 生成授权码
-3. 记录授权码和注册的邮箱用于自动构建发布安装包
-
-:::
-
-:::snippet Travis 自动构建
-
-1. github 账号登陆 [https://www.travis-ci.org/](https://www.travis-ci.org)
-
-![travis登陆](../../assets/images/vue-01-11.png)
-
-2. 勾选 `hv-web-ui` 单击 `Settings` 项目配置
-
-![travis配置](../../assets/images/vue-01-12.png)
-
-3. 设置环境变量 `Environment Variables`
-
-| 变量         | 描述                    |
-| :----------- | :---------------------- |
-| GITHUB_TOKEN | Github 生成的授权 Token |
-| NPM_EMAIL    | NPM 注册邮箱            |
-| NPM_TOKEN    | NPM 授权 Token          |
-
-![travis环境变量](../../assets/images/vue-01-13.png)
-
-4. `package.json` 去掉 `private` 属性才能发布到 NPM
-
-5. 项目根目录追加 `.travis.yml` 自动化构建的配置文件，详细配置查看[https://docs.travis-ci.com](https://docs.travis-ci.com)
-
-```yml
-# 编译环境
-language: node_js
-
-# Node 版本
-node_js:
-  - "10"
-
-# 安装依赖
-install:
-  - npm install
-
-# 代码编译
-script:
-  - npm run build
-
-# 发布配置
-deploy:
-  # 发布到 gh-pages
-  - provider: pages
-    local_dir: dist
-    skip_cleanup: true
-    github_token: $GITHUB_TOKEN
-    keep_history: true
-    on:
-      branch: master
-  # 发布到 npm
-  - provider: npm
-    email: $NPM_EMAIL
-    api_key: $NPM_TOKEN
-    on:
-      tags: true
-      branch: master
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-3">
+  <p v-if="seen">现在你看到我了</p>
+</div>
 ```
 
-6. 提价代码，项目设置标签 `tag` 版本号 `v0.1.0`
+```javascript
+// app3.seen = false不可见app3.seen = true可见
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    seen: true
+  }
+});
+```
 
-7. [https://www.travis-ci.org/huang7000/hv-web-ui/](https://www.travis-ci.org/huang7000/hv-web-ui/) 查看构建进度
+`v-for`指令可以绑定数组的数据来渲染一个项目列表
 
-![travis构建进度](../../assets/images/vue-01-14.png)
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-4">
+  <ol>
+    <li v-for="todo in todos">
+      {{ todo.text }}
+    </li>
+  </ol>
+</div>
+```
 
-8. 构建完成后查看对应的 `gh-pages` 页面 [https://huang7000.github.io/hv-web-ui/](https://huang7000.github.io/hv-web-ui/)
-
-![gh-pages预览](../../assets/images/vue-01-15.png)
-
-9. npm 搜索 `hv-web-ui`
-
-![gh-pages预览](../../assets/images/vue-01-16.png)
-
-10. 构建在线演示和 npm 发布完成
+```javascript
+// app-4的div的ol 会生成5个li
+let app4 = new Vue({
+  el: "#app-4",
+  data: {
+    todos: [
+      { text: "学习 html" },
+      { text: "学习 css" },
+      { text: "学习 js" },
+      { text: "学习 es6" },
+      { text: "学习 vue" }
+    ]
+  }
+});
+// app-4的div的ol 会天添加一个新的li
+app4.todos.push({ text: "新项目" });
+```
 
 :::
 
-:::snippet 代码下载
+:::snippet 处理用户输入
 
-项目地址：[https://github.com/huang7000/hv-web-ui](https://github.com/huang7000/hv-web-ui)
+`v-on`指令添加一个事件监听器
 
-当前版本：[https://github.com/huang7000/hv-web-ui/releases/tag/v0.1.0](https://github.com/huang7000/hv-web-ui/releases/tag/v0.1.0)
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-5">
+  <p>{{ message }}</p>
+  <button v-on:click="reverseMessage">逆转消息</button>
+</div>
+```
+
+```javascript
+// app-5按钮点击事件p标签的内容会变成息消转逆euV
+let app5 = new Vue({
+  el: "#app-5",
+  data: {
+    message: "Vue逆转消息"
+  },
+  methods: {
+    reverseMessage: function() {
+      this.message = this.message
+        .split("")
+        .reverse()
+        .join("");
+    }
+  }
+});
+```
+
+`v-model`指令，它能轻松实现表单输入和应用状态之间的双向绑定。
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-6">
+  <p>{{ message }}</p>
+  <input v-model="message" />
+</div>
+```
+
+```javascript
+// app-6的input标签输入什么p标签就显示什么
+let app6 = new Vue({
+  el: "#app-6",
+  data: {
+    message: "Hello Vue!"
+  }
+});
+```
+
+:::
+
+:::snippet 组件化应用构建
+
+```javascript
+// 定义名为 todo-item 的新组件
+Vue.component("todo-item", {
+  props: ["todo"],
+  template: "<li>{{ todo.text }}</li>"
+});
+
+let app7 = new Vue({
+  el: "#app-7",
+  data: {
+    groceryList: [
+      { id: 0, text: "蔬菜" },
+      { id: 1, text: "奶酪" },
+      { id: 2, text: "随便其它什么人吃的东西" }
+    ]
+  }
+});
+```
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-7">
+  <ol>
+    <!--
+      现在我们为每个 todo-item 提供 todo 对象
+      todo 对象是变量，即其内容可以是动态的。
+      我们也需要为每个组件提供一个“key”，稍后再
+      作详细解释。
+    -->
+    <todo-item
+      v-for="item in groceryList"
+      v-bind:todo="item"
+      v-bind:key="item.id"
+    >
+    </todo-item>
+  </ol>
+</div>
+```
+
+:::
+
+:::snippet 自定义元素的关系
+
+> 自定义元素——它是`Web`组件规范的一部分，这是因为`Vue`的组件语法部分参考了该规范。例如 Vue 组件实现了`Slot API`与`is`特性。但是，还是有几个关键差别：
+
+1. `Web Components`规范已经完成并通过，但未被所有浏览器原生实现。目前`Safari 10.1+`、`Chrome 54+`
+   和`Firefox 63+`原生支持`Web Components`。相比之下，`Vue`组件不需要任何`polyfill`，
+   并且在所有支持的浏览器 (`IE9`及更高版本) 之下表现一致。必要时，`Vue` 组件也可以包装于原生自定义元素之内。
+2. `Vue` 组件提供了纯自定义元素所不具备的一些重要功能，最突出的是跨组件数据流、自定义事件通信以及构建工具集成。
 
 :::
