--- a/src/notes/vue/02.md
+++ b/src/notes/vue/02.md
@@ -1,591 +1,121 @@
-:::snippet 文档示例
-
-1. 代码示例
-
-![代码示例](../../assets/images/vue-02-01.png)
-
-2. 详细代码
-
-![详细代码](../../assets/images/vue-02-02.png)
-
-3. markdown 文件
-
-![代码文档](../../assets/images/vue-02-03.png)
-
-:::
-
-:::snippet demo 示例组件 hv-code-snippet
-
-示例展示：代码运行示例、功能描述、详细代码展示
-
-```html
-<template>
-  <div class="hv-code-snippet">
-    <div class="hv-code-snippet--demo">
-      <slot name="source"></slot>
-    </div>
-    <div class="hv-code-snippet--desc">
-      <slot name="desc"></slot>
-      <span class="hv-code-snippet--icon-code" @click="showCode = !showCode">
-        <img v-if="showCode" src="../assets/code-open.svg" />
-        <img v-else src="../assets/code-close.svg" />
-      </span>
-    </div>
-    <div v-show="showCode" class="hv-code-snippet--code">
-      <slot name="code"></slot>
-    </div>
-  </div>
-</template>
-
-<script>
-  export default {
-    data() {
-      return {
-        showCode: false
-      };
-    }
-  };
-</script>
-
-<style>
-  .hv-code-snippet {
-    position: relative;
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0 0 16px;
-    border-radius: 5px;
-    transition: all 0.2s;
-    box-shadow: 0 6px 12px -2px rgba(0, 32, 128, 0.1), 0 0 0 1px #f0f2f7;
-    background-color: #ffffff;
-    text-align: left;
-  }
-  .hv-code-snippet--demo {
-    box-sizing: border-box;
-    padding: 30px 35px;
-    color: #333333;
-    border-bottom: 1px solid #ebedf0;
-  }
-  .hv-code-snippet--desc {
-    position: relative;
-    box-sizing: border-box;
-    width: 100%;
-    min-height: 44px;
-    padding: 12px 50px 12px 20px;
-    font-size: 14px;
-    transition: background-color 0.4s;
-  }
-
-  .hv-code-snippet--icon-code {
-    position: absolute;
-    right: 16px;
-    bottom: 13px;
-    cursor: pointer;
-    width: 18px;
-    height: 18px;
-    line-height: 18px;
-    text-align: center;
-  }
-
-  .hv-code-snippet--icon-code img {
-    transition: all 0.4s;
-    user-select: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    margin: 0;
-    max-width: 100%;
-    width: 100%;
-    vertical-align: baseline;
-    box-shadow: none;
-  }
-
-  .hv-code-snippet--code {
-    box-sizing: border-box;
-    border-top: 1px solid #ebedf0;
-  }
-
-  .hv-code-snippet--code code {
-    background-color: #f5f7fb;
-    font-family: Consolas, Menlo, Courier, monospace;
-    border: none;
-    display: block;
-    font-size: 14px;
-    padding: 16px 32px;
-    line-height: 1.5;
-  }
-  .hv-code-snippet--code .hljs {
-    padding: 0;
-    margin: 0;
-  }
-</style>
-```
-
-> 组件设置设置插槽：source 代码运行效果、desc 内容描述、code 高亮显示代码
-
-:::
-
-:::snippet webpack 加载器 markdown-loader
-
-1. 解析 markdown 为 html 使用 markdown-it 和 markdown-it-container
-
-```bash
-npm install markdown-it --save-dev
-npm install markdown-it-container --save-dev
-```
-
-2. 代码高亮显示使用 highlight.js
-
-```bash
-npm install highlight.js --save-dev
-```
-
-3. markdown-loader 加载器
+:::snippet 创建一个`Vue`实例
 
 ```javascript
-const MarkdownIt = require("markdown-it");
-const MarkdownItContainer = require("markdown-it-container");
-const VueTemplateComplier = require("vue-template-compiler");
-const hljs = require("highlight.js");
-const { parse, compileTemplate } = require("@vue/component-compiler-utils");
-
-module.exports = function(source) {
-  // 需要解析成vue代码块集合
-  const componentCodeList = [];
-  let styleCodeList = [];
-  // 初始还MarkdownIt用于转换md文件为html
-  const markdownIt = MarkdownIt({
-    // 将markdown中的代码块用hljs高亮显示
-    highlight: function(str, lang) {
-      if (lang && hljs.getLanguage(lang)) {
-        return `<pre class="hljs"><code>${
-          hljs.highlight(lang, str, true).value
-        }</code></pre>`;
-      }
-      return `<pre class="hljs"><code>${markdownIt.utils.escapeHtml(
-        str
-      )}</code></pre>`;
-    }
-  });
-  // 使用【markdown-it-container】插件解析【:::snippet :::】代码块为vue渲染
-  markdownIt.use(MarkdownItContainer, "snippet", {
-    // 验证代码块为【:::snippet :::】才进行渲染
-    validate(params) {
-      return params.trim().match(/^snippet\s*(.*)$/);
-    },
-    // 代码块渲染
-    render(tokens, index) {
-      const token = tokens[index];
-      const tokenInfo = token.info.trim().match(/^snippet\s*(.*)$/);
-      if (token.nesting === 1) {
-        // 获取snippet第一行的表述内容
-        const desc = tokenInfo && tokenInfo.length > 1 ? tokenInfo[1] : "";
-        // 获取vue组件示例的代码
-        const nextIndex = tokens[index + 1];
-        const content = nextIndex.type === "fence" ? nextIndex.content : "";
-        // 将content解析为vue组件基本属性对象;
-        let { template, script, styles } = parse({
-          source: content,
-          compiler: VueTemplateComplier,
-          needMap: false
-        });
-        styleCodeList = styleCodeList.concat(styles);
-        // 将template的转为render函数
-        const { code } = compileTemplate({
-          source: template.content,
-          compiler: VueTemplateComplier
-        });
-        // 获取script的代码
-        script = script ? script.content : "";
-        if (script) {
-          script = script.replace(
-            /export\s+default/,
-            "const exportJavaScript ="
-          );
-        } else {
-          script = "const exportJavaScript = {} ;";
-        }
-        // 代码块解析将需要解析vue组件的存储，渲染html用组件名称替代
-        const name = `hv-snippent-${componentCodeList.length}`;
-        // 渲染组件代码添加到数据集合
-        componentCodeList.push(`"${name}":(function () {
-          ${code}
-          ${script}
-           return {
-             ...exportJavaScript,
-             render,
-             staticRenderFns
-          }
-        })()`);
-        // 将需要渲染的示例用hv-code-snippet组件包裹替换插槽显示示例效果
-        return `<hv-code-snippet>
-                  <div slot="desc">${markdownIt.render(desc)}</div>
-                  <${name} slot="source" />
-                  <div slot="code">`;
-      }
-      return `    </div>
-                </hv-code-snippet> `;
-    }
-  });
-  // 将所有转换好的代码字符串拼接成vue单组件template、script、style格式
-  return `
-        <template>
-          <div class="hv-snippet-doc">
-            ${markdownIt.render(source)}
-          </div>
-        </template>
-        <script>
-           export default {
-           name: 'hv-component-doc',
-           components: {
-            ${componentCodeList.join(",")}
-           }
-         }
-       </script>
-       <style>
-         ${Array.from(styleCodeList, m => m.content).join("\n")}
-       </style>`;
-};
-```
-
-4. 加载器编译过程
-
-（1）markdown-it 来解析 markdown 内容
-
-（2）markdown-it-container 解析自定义`:::snippet :::`为 vue 组件代码
-
-（3）`:::snippet :::`代码块中的 html 代码编译为 vue 可执行代码字符串
-
-（4）@vue/component-compiler-utils 将 template 模板编译成 render 函数
-
-（5）所有的代码块`:::snippet :::`都编译拼接对应的单个组件自执行函数返回 vue component
-
-（6）markdown 文件直接编译的 html 作为新的 vue 组件 template
-
-（7）将 vue component 的组件集合拼接到 vue 组件 script 标签中的 compoenent
-
-（8）将各个组件的 style 拼接到 vue 组件的 style
-
-（9）template、script、style 组合成单组件格式的字符串，在配置 vue-loader 来加载解析
-
-5. vue.config.js 加载器配置解析
-
-```javascript
-module.exports = {
-  publicPath: "hv-web-ui",
-  chainWebpack: config => {
-    config.module
-      .rule("md")
-      .test(/\.md/)
-      .use("vue-loader")
-      .loader("vue-loader")
-      .options({
-        compilerOptions: {
-          preserveWhitespace: false
-        }
-      })
-      .end()
-      .use("markdown-loader")
-      .loader(
-        require("path").resolve(__dirname, "./webpack/markdown-loader.js")
-      )
-      .end();
-  }
-};
-```
-
-:::
-
-:::snippet 示例配置
-
-1. 修改 HeloWorld.vue 组件便于测试
-
-```html
-<template>
-  <div class="hello">
-    <h1>{{ msg }}</h1>
-  </div>
-</template>
-
-<script>
-  export default {
-    name: "HelloWorld",
-    props: {
-      msg: String
-    }
-  };
-</script>
-```
-
-2. 代码示例文档 HeloWorldDoc.md
-
-![HeloWorldDoc.md](../../assets/images/vue-02-03.png)
-
-3. main.js 全局注册和样式引用
-
-```javascript
-import Vue from "vue";
-import App from "./App.vue";
-import HvCodeSnippet from "./components/code-snippet";
-import HvHelloWorld from "./components/HelloWorld";
-import "highlight.js/styles/color-brewer.css";
-
-Vue.config.productionTip = false;
-Vue.component("hv-code-snippet", HvCodeSnippet);
-Vue.component("hv-hello-world", HvHelloWorld);
-
-new Vue({
-  render: h => h(App)
-}).$mount("#app");
-```
-
-4. app.vue 引用 HeloWorldDoc.md
-
-```html
-<template>
-  <div id="app">
-    <img alt="Vue logo" src="./assets/logo.png" />
-    <hv-hello-world-doc></hv-hello-world-doc>
-  </div>
-</template>
-
-<script>
-  import HvHelloWorld from "./components/HelloWorld";
-  import HvHelloWorldDoc from "./components/HelloWorldDoc.md";
-
-  export default {
-    name: "app",
-    components: {
-      HvHelloWorld,
-      HvHelloWorldDoc
-    }
-  };
-</script>
-
-<style>
-  #app {
-    font-family: "Avenir", Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-    margin-top: 60px;
-    padding: 0 150px;
-  }
-</style>
-```
-
-5. 启动项目或者重新运行
-
-![效果展示](../../assets/images/vue-02-01.png)
-
-:::
-
-:::snippet 路由切换组件文档
-
-1. 安装路由
-
-```bash
-npm install vue-router -save-dev
-```
-
-2. 样式处理可以使用`less`、`scss`、`stylus`等动态处理，当前使用 scss 动态处理 css
-
-```bash
-npm install node-sass -save-dev
-npm install sass-loader -save-dev
-```
-
-3. 组件首页 component.vue
-
-```html
-<template>
-  <div class="hv-compoent">
-    <!-- top -->
-    <div class="hv-compoent--top">
-      <div class="hv-compoent--logo">
-        <img src="../assets/images/hv-ui.jpg" />
-      </div>
-      <a
-        class="hv-component--github"
-        href="https://github.com/huang7000/hv-web-ui"
-      >
-        <i class="hv-icon-github"></i>
-      </a>
-    </div>
-    <!-- content -->
-    <div class="hv-conpoenent--content">
-      <div class="hv-conpoenent--left">
-        <h3 class="hv-conpoenent--group">组件</h3>
-        <router-link class="hv-conpoenent--link" to="/"
-          >hello word</router-link
-        >
-      </div>
-      <div class="hv-conpoenent--page">
-        <div class="hv-conpoenent--view">
-          <router-view></router-view>
-        </div>
-      </div>
-    </div>
-  </div>
-</template>
-
-<script>
-  export default {};
-</script>
-
-<style lang="scss">
-  .hv-compoent {
-    position: relative;
-  }
-
-  .hv-compoent--top {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 20;
-    height: 65px;
-    width: 100%;
-    padding: 6px 16px;
-    background-color: #fff;
-    box-sizing: border-box;
-    transition: all 0.3s ease;
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.04);
-  }
-
-  .hv-compoent--logo {
-    vertical-align: middle;
-    height: 65px;
-    line-height: 65px;
-    display: inline-block;
-    padding-right: 15px;
-
-    > img {
-      height: 50px;
-    }
-  }
-
-  .hv-component--github {
-    color: #444444;
-    font-size: 40px;
-    position: fixed;
-    right: 40px;
-    top: 10px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-      transform: scale(1.2);
-    }
-  }
-
-  .hv-conpoenent--content {
-    padding-top: 65px;
-  }
-
-  .hv-conpoenent--left {
-    position: fixed;
-    z-index: 30;
-    margin: 0;
-    top: 65px;
-    left: 0;
-    bottom: 0;
-    box-sizing: border-box;
-    overflow-y: auto;
-    width: 240px;
-    font-size: 14px;
-    background-color: #f5f7fb;
-    margin: 0;
-    padding: 14px 0;
-  }
-
-  .hv-conpoenent--group {
-    color: #333333;
-    font-size: 16px;
-    padding-left: 16px;
-    margin-top: 0;
-    margin-bottom: 4px;
-    box-sizing: border-box;
-    height: 40px;
-    line-height: 40px;
-    font-weight: bold;
-  }
-
-  .hv-conpoenent--link {
-    position: relative;
-    display: inline-block;
-    color: #444444;
-    border-left: 4px solid transparent;
-    padding: 8px 16px 8px 20px;
-    line-height: 1.5;
-    width: 100%;
-    box-sizing: border-box;
-    transition: all 0.3s ease;
-    font-size: 14px;
-    text-decoration: none;
-
-    &:hover {
-      color: #5b3cc4;
-    }
-  }
-
-  .router-link-exact-active {
-    font-weight: 600;
-    border-left-color: #5b3cc4;
-    color: #5b3cc4;
-    font-weight: bold;
-    background-color: #ede8ff;
-    opacity: 1;
-  }
-
-  .hv-conpoenent--page {
-    padding-left: 240px;
-    background-color: #fdfdfd;
-  }
-
-  .hv-conpoenent--view {
-    max-width: 1000px;
-    padding: 25px 50px 60px 50px;
-    margin: 0 auto;
-  }
-</style>
-```
-
-4. 路由配置
-
-```javascript
-import Vue from "vue";
-import Router from "vue-router";
-
-Vue.use(Router);
-
-export default new Router({
-  routes: [
-    {
-      path: "/",
-      component: () => import("./views/component.vue"),
-      children: [
-        {
-          path: "/",
-          name: "hello",
-          component: () => import("./components/HelloWorldDoc.md")
-        }
-      ]
-    }
-  ]
+let vm = new Vue({
+  // 选项
 });
 ```
 
-5. 效果展示
+:::
 
-![路由展示](../../assets/images/vue-02-04.png)
+:::snippet 数据与方法
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app">
+  <p>{{ foo }}</p>
+  <!-- 这里的 `foo` 不会更新！ -->
+  <button v-on:click="foo = 'baz'">Change it</button>
+</div>
+<div id="example">
+  {{a}}
+</div>
+```
+
+```javascript
+// 当一个 Vue 实例被创建时，它将 data 对象中的所有的属性加入到 Vue 的响应式系统中。
+// 我们的数据对象
+let data = {
+  a: 1,
+  C: ""
+};
+// 该对象被加入到一个 Vue 实例中
+let vm1 = new Vue({
+  data: data
+});
+// 获得这个实例上的属性
+// 返回源数据中对应的字段
+vm1.a == data.a; // => true
+// 设置属性也会影响到原始数据
+vm1.a = 2;
+data.a; // => 2
+// ……反之亦然
+data.a = 3;
+vm1.a; // => 3
+// 只有当实例被创建时就已经存在于 data 中的属性才是响应式的。
+vm1.b = "hi"; // 对 b 的改动将不会触发任何视图的更新。
+
+// 使用 Object.freeze()，这会阻止修改现有的属性，也意味着响应系统无法再追踪变化。
+let obj = {
+  foo: "bar"
+};
+Object.freeze(obj);
+let app = new Vue({
+  el: "#app",
+  data: obj
+});
+// Vue 实例还暴露了一些有用的实例属性与方法。它们都有前缀 $，以便与用户定义的属性区分开来。
+let data1 = {
+  a: 1
+};
+let vm2 = new Vue({
+  el: "#example",
+  data: data1
+});
+console.log(vm2.$data === data1); // => true
+console.log(vm2.$el === document.getElementById("example")); // => true
+// $watch 是一个实例方法
+vm2.$watch("a", function(newValue, oldValue) {
+  // 这个回调将在 `vm.a` 改变后调用
+});
+```
 
 :::
 
-:::snippet 代码下载
+:::snippet 实例生命周期钩子
 
-项目地址：[https://github.com/huang7000/hv-web-ui](https://github.com/huang7000/hv-web-ui)
+```javascript
+new Vue({
+  data: {
+    a: 1
+  },
+  created: function() {
+    // `this` 指向 vm 实例
+    console.log("a is: " + this.a); // => "a is: 1"
+  }
+});
+```
 
-当前版本：[https://github.com/huang7000/hv-web-ui/releases/tag/v0.1.2](https://github.com/huang7000/hv-web-ui/releases/tag/v0.1.2)
+:::
+
+:::snippet 生命周期
+
+![初始化](../../assets/images/vuecourse-02-01.png)
+
+1. `beforeCreate`（新对象诞生）
+   `Vue`对象用新方法实例化。它创建一个`Vue`类的对象来处理`DOM`元素。对象的这个生命阶段可以通过`beforeCreated`挂钩来访问 。我们可以在这个钩子中插入我们的代码，在对象初始化之前执行。
+
+2. `created`创建（具有默认特性的对象）
+   在这个生命阶段，对象及其事件完全初始化。`created`是访问这个阶段并编写代码的钩子。
+
+3. `beforeMounted`（对象在`DOM`中适合形状）
+   这个钩子被调用`beforeMounted`。在这个阶段，它检查是否有任何模板可用于要在`DOM`中呈现的对象。如果没有找到模板，那么它将所定义元素的外部`HTML`视为模板。
+
+4. `mounted`已安装（`DOM`已准备就绪并放置在页面内）
+   一旦模板准备就绪。它将数据放入模板并创建可呈现元素。用这个新的数据填充元素替换`DOM`元素。这一切都发生在`mounted`钩子上。
+
+5. `beforeUpdate`（更改已完成，但尚未准备好更新`DOM`）
+   在外部事件/用户输入`beforeUpdate`发生更改时，此钩子即在反映原始`DOM`元素的更改之前被触发。
+
+6. `updated` 更新（在`DOM`中呈现的更改）
+   然后，通过实际更新`DOM`对象并触发`updated`，屏幕上的变化得到呈现 。
+
+7. `beforeDestroy`（对象准备死掉）
+   就在 Vue 对象被破坏并从内存中释放之前，`deforeDestroy`钩子被触发，并允许我们在其中处理我们的自定义代码。
+
+8. `destroyed`销毁（对象停止并从内存中删除）
+   该`destroyed`钩子被成功运行销毁对象上调用。
+
+> 不要在选项属性或回调上使用箭头函数，比如`created: () => console.log(this.a)`或`vm.\$watch('a', newValue => this.myMethod())`。因为箭头函数是和父级上下文绑定在一起的，`this`不会是如你所预期的`Vue`实例，经常导致`Uncaught TypeError: Cannot read property of undefined`或`Uncaught TypeError: this.myMethod is not a function`之类的错误。
 
 :::
