--- a/src/notes/vue/03.md
+++ b/src/notes/vue/03.md
@@ -1,758 +1,253 @@
-:::snippet HvButton 按钮组件
+:::snippet 模板语法
 
-1. `v-bind="$attrs"` 将原生的 `button` 属性绑定在 `HvButton` 直接设置到 `button` 标签上。
-2. `hv-button--type-${property}`根据不同的属性绑定 `class` 生成不同的样式。
-3. `$slots.default` 判断是否设置了默认的 `slot` 插槽来根据内容设置对应的样式。
-4. 通过 `icon` 和 `iconType` 来设置图标和放置位置。
+1. `vue.js`使用了基于`HTML`的模板语法，允许开发者声明式地将`DOM`绑定至底层`Vue`实例的数据。所有`Vue.js`的模板都是合法的`HTML`，所以能被遵循规范的浏览器和`HTML`解析器解析。
+2. 在底层的实现上，Vue 将模板编译成虚拟`DOM`渲染函数。结合响应系统`Vue`能够智能地计算出最少需要重新渲染多少组件，并把`DOM`操作次数减到最少。
+   :::
+
+:::snippet 文本
+数据绑定最常见的形式就是使用`Mustache`语法 (双大括号) 的文本插值
 
 ```html
-<template>
-  <button
-    v-bind="$attrs"
-    :class="[
-          'hv-button',
-          `hv-button--type-${type}`,
-          `hv-button--color-${color}`,
-          `hv-button--size-${size}`,
-          {'hv-button--circle':circle},
-          iconTypeClass]"
-  >
-    <i v-if="icon&&iconType==='left'" :class="icon"></i>
-    <span v-if="$slots.default" class="hv-button--text">
-      <slot />
-    </span>
-    <i v-if="icon&&iconType==='right'" :class="icon"></i>
-  </button>
-</template>
-
-<script>
-  export default {
-    name: "HvButton",
-    componentName: "HvButton",
-    props: {
-      type: {
-        type: String,
-        default: "fill"
-      },
-      color: {
-        type: String,
-        default: "primary"
-      },
-      icon: String,
-      iconType: {
-        type: String,
-        default: "left"
-      },
-      circle: Boolean,
-      size: {
-        type: String,
-        default: "default"
-      }
-    },
-    computed: {
-      iconTypeClass() {
-        if (!this.$slots.default) return `hv-button--icon-default`;
-        return `hv-button--icon-${this.iconType}`;
-      }
-    }
-  };
-</script>
-<style lang="scss" scoped>
-  .hv-button {
-    transition: all 0.2s ease;
-    padding: 10px;
-    border: 0;
-    border-radius: 4px;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    color: #ffffff;
-    box-sizing: border-box;
-    background: transparent;
-    outline: none;
-
-    &:disabled {
-      opacity: 0.5;
-      cursor: default;
-      pointer-events: none;
-    }
-  }
-
-  .hv-button--text {
-    position: relative;
-    height: 16px;
-    display: inline-block;
-    transition: all 0.3s ease;
-  }
-
-  .hv-button--type-fill {
-    &.hv-button--color-primary {
-      background-color: #2e74ff;
-      &:hover {
-        box-shadow: 0px 9px 20px -9px #2e74ff;
-      }
-    }
-    &.hv-button--color-success {
-      background-color: #46c83a;
-      &:hover {
-        box-shadow: 0px 9px 20px -9px #46c83a;
-      }
-    }
-    &.hv-button--color-danger {
-      background-color: #f54757;
-      &:hover {
-        box-shadow: 0px 9px 20px -9px #f54757;
-      }
-    }
-    &.hv-button--color-warning {
-      background-color: #f9ba03;
-      &:hover {
-        box-shadow: 0px 9px 20px -9px #f9ba03;
-      }
-    }
-  }
-
-  .hv-button--type-border {
-    padding: 9px;
-
-    &.hv-button--color-primary {
-      border: 1px solid #2e74ff;
-      color: #2e74ff;
-
-      &:hover {
-        background-color: #2e74ff1a;
-      }
-    }
-    &.hv-button--color-success {
-      border: 1px solid #46c83a;
-      color: #46c83a;
-
-      &:hover {
-        background-color: #46c83a1a;
-      }
-    }
-    &.hv-button--color-danger {
-      border: 1px solid #f54757;
-      color: #f54757;
-
-      &:hover {
-        background-color: #f547571a;
-      }
-    }
-    &.hv-button--color-warning {
-      border: 1px solid #f9ba03;
-      color: #f9ba03;
-
-      &:hover {
-        background-color: #f9ba031a;
-      }
-    }
-  }
-
-  .hv-button--type-flat {
-    &.hv-button--color-primary {
-      color: #2e74ff;
-
-      &:hover {
-        background-color: #2e74ff1a;
-      }
-    }
-    &.hv-button--color-success {
-      color: #46c83a;
-
-      &:hover {
-        background-color: #46c83a1a;
-      }
-    }
-    &.hv-button--color-danger {
-      color: #f54757;
-
-      &:hover {
-        background-color: #f547571a;
-      }
-    }
-    &.hv-button--color-warning {
-      color: #f9ba03;
-
-      &:hover {
-        background-color: #f9ba031a;
-      }
-    }
-  }
-
-  .hv-button--icon-default {
-    width: 36px;
-    height: 36px;
-  }
-
-  .hv-button--icon-left > i {
-    margin-right: 5px;
-  }
-
-  .hv-button--icon-right > i {
-    margin-left: 5px;
-  }
-
-  .hv-button--circle {
-    border-radius: 18px;
-  }
-
-  .hv-button--size-large {
-    font-size: 16px;
-    padding: 13px;
-
-    &.hv-button--circl {
-      border-radius: 22px;
-    }
-  }
-
-  .hv-button--size-small {
-    padding: 6px 8px;
-    &.hv-button--circl {
-      border-radius: 14px;
-    }
-  }
-</style>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app">
+  <p v-once>姓名 ：{{name}}</p>
+  <p>年龄：{{age}}</p>
+</div>
 ```
 
-:::
+```javascript
+let app = new Vue({
+  el: "#app",
+  data: {
+    name: "小明",
+    age: "18"
+  }
+});
+app.name = "小强"; //v-once 导致页面姓名没有更改
+app.age = 20; // 年龄改成 20
+```
 
-:::snippet HvButton 安装配置
+1. 绑定的数据对象上`age`属性发生了改变，插值处的内容都会更新。
+2. 通过使用`v-once`指令，你也能执行一次性地插值，当数据改变时，插值处的内容不会更新。
+   :::
 
-1. Vue 安装配置 `components/button/index.js`
+:::snippet 原始`HTML`
+双大括号会将数据解释为普通文本，而非`HTML`代码。为了输出真正的`HTML`，你需要使用`v-html`指令
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-2">
+  <p>Using mustaches: {{ rawHtml }}</p>
+  <p>Using v-html directive: <span v-html="rawHtml"></span></p>
+</div>
+```
 
 ```javascript
-import HvButton from "./button.vue";
-HvButton.install = function(Vue) {
-  Vue.component(HvButton.name, HvButton);
+let rawHtml = {
+  rawHtml: '<span style="color:red"This should be red</span>',
+  age: 18
 };
-export default HvButton;
-```
-
-2. 组件库的安装配置 `packages/index.js`
-
-```javascript
-import HvButton from "./components/button";
-const components = [HvButton];
-const install = function(Vue) {
-  components.forEach(component => {
-    Vue.component(component.name, component);
-  });
-};
-export default {
-  version: process.env.VERSION,
-  install,
-  HvButton
-};
-```
-
-3. 引用安装 `main.js`
-
-```javascript
-import HvWebComponents from "../packages/index.js";
-Vue.use(HvWebComponents);
-```
-
-4. 编写 md 文档文件 [components/button/index.md](https://raw.githubusercontent.com/huang7000/hv-web-ui/master/packages/components/button/index.md)
-
-5. 路由配置 `router.js`
-
-```javascript
-import Vue from "vue";
-import Router from "vue-router";
-Vue.use(Router);
-export default new Router({
-  routes: [
-    {
-      path: "/",
-      component: () => import("./views/component.vue"),
-      children: [
-        {
-          path: "/",
-          name: "component-button",
-          component: () => import("../packages/components/button/index.md")
-        }
-      ]
-    }
-  ]
+let app2 = new Vue({
+  el: "#app-2",
+  data: rawHtml
 });
 ```
 
-6. 页面链接配置 `views/component.vue`
-
-```html
-<router-link class="hv-conpoenent--link" to="/">Button</router-link>
-```
-
-7. 效果查看 [https://huang7000.github.io/hv-web-ui/#/button](https://huang7000.github.io/hv-web-ui/#/button)
-
-![HvButton演示](../../assets/images/vue-03-01.png)
-
 :::
 
-:::snippet NPM 发布配置
+:::snippet 特性
 
-1. Vue 打包类库配置,参照 Vue CLI[构建目标](https://cli.vuejs.org/zh/guide/build-targets.html#构建目标)进行类库构建配置入口文件`src/index.js`
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-3">
+  <button v-bind:id="dynamicId">id是ceshidynamicId</button>
+  <button v-bind:disabled="isButtonDisabled">Button</button>
+</div>
+```
 
 ```javascript
-import HvWebComponents from "../packages/index.js";
-import "../packages/index.scss";
-export default HvWebComponents;
+let app3 = new Vue({
+  el: "#app-3",
+  data: {
+    dynamicId: "ceshidynamicId",
+    isButtonDisabled: true
+  }
+});
 ```
 
-2. npm 的 scripts 增加配置
+1. `Mustache`语法不能作用在`HTML`特性上，遇到这种情况应该使用`v-bind`指令
+2. `isButtonDisabled`的值是`null`、`undefined`或`false`，则`disabled`特性甚至不会被包含在渲染出来的`<button>`元素中
+   :::
+
+:::snippet 使用 JavaScript 表达式
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-4">
+  <p>{{ number + 1 }}</p>
+  <p>{{ ok ? 'YES' : 'NO' }}</p>
+  <p>{{ message.split('').reverse().join('') }}</p>
+  <div v-bind:id="'list-' + id">wd</div>
+  <p>
+    <!-- 这是语句，不是表达式{{ var a = 1 }} -->
+    {{ 1 }}
+  </p>
+  <p>
+    <!-- 流控制也不会生效，请使用三元表达式{{ if (ok) { return message } }} -->
+    {{ok?message:""}}
+  </p>
+</div>
+```
 
 ```javascript
-"lib": "vue-cli-service build --dest lib --target lib src/index.js"
+let app4 = new Vue({
+  el: "#app-4",
+  data: {
+    number: 10,
+    ok: true,
+    message: "我是中国人，我爱中国",
+    id: "ceshiid"
+  }
+});
 ```
-
-4. `.travis.yml`配置调整,设置 `npm run lib` 编译完成，`skip_cleanup: true` 直接发布到 NPM 不清空目录
-
-```yml
-# 编译环境
-language: node_js
-
-# Node 版本
-node_js:
-  - "10"
-
-# 安装依赖
-install:
-  - npm install
-
-# 代码编译
-script:
-  - npm run build
-  - npm run lib
-
-# 发布配置
-deploy:
-  # 发布到 gh-pages
-  - provider: pages
-    local_dir: dist
-    skip_cleanup: true
-    github_token: $GITHUB_TOKEN
-    keep_history: true
-    on:
-      branch: master
-  # 发布到 npm
-  - provider: npm
-    email: $NPM_EMAIL
-    api_key: $NPM_TOKEN
-    skip_cleanup: true
-    on:
-      tags: true
-      branch: master
-```
-
-5. 提交代码设置标签 tag 推送到 github 触发 Travis CI 自动构建
-
-![自动构建](../../assets/images/vue-03-02.png)
-
-6. NPM 查看,发布成功
-
-![NPM版本](../../assets/images/vue-03-03.png)
 
 :::
 
-:::snippet 安装测试
+:::snippet 指令
 
-1. 安装
+1. 指令`Directives`是带有`v-`前缀的特殊特性。指令特性的值预期是单个`JavaScript`表达式 (`v-for`是例外情况)。
+2. 指令的职责是，当表达式的值改变时，将其产生的连带影响，响应式地作用于`DOM`。
+3. 参数 一些指令能够接收一个“参数”，在指令名称之后以冒号表示。例如，`v-bind`指令可以用于响应式地更新`HTML`特性
 
-```bash
-npm i hv-web-ui -S
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-5">
+  <p v-if="seen">现在你看到我了</p>
+  <div v-bind:id="'list-' + id">wd</div>
+  <a v-bind:href="url">百度</a>
+  <a v-on:click="doSomething">百度失败</a>
+</div>
 ```
-
-2. 引用
 
 ```javascript
-import Vue from "vue";
-import HvWebComponents from "hv-web-ui";
-import "hv-web-ui/lib/hv-web-ui.css";
-Vue.use(HvWebComponents);
-```
-
-3. 测试
-
-```html
-<hv-button>button</hv-button>
+let app5 = new Vue({
+  el: "#app-5",
+  data: {
+    seen: true,
+    url: "www.baidu.com",
+    id: "ceshiid"
+  },
+  methods: {
+    doSomething: function() {
+      console.log("访问不了");
+    }
+  }
+});
 ```
 
 :::
 
-:::snippet HvGrid 栅格布局
+:::snippet 动态参数
 
-1. 栅格布局拆分 HvRow、HvCol 组件来进行布局排版
-2. HvRow 根据属性设置样式主要设置 flex 布局和对应的相关属性提取为 props
-3. HvCol 获取父组件 gutter 来设置当前组建的间隔和属性生成 class 和 style
-4. HvCol 循环生成 24 栅格样式
-
-```scss
-@for $i from 0 through 24 {
-  .hv-col-#{$i} {
-    width: (1 / 24 * $i * 100) * 1%;
-  }
-  .hv-col-offset-#{$i} {
-    margin-left: (1 / 24 * $i * 100) * 1%;
-  }
-  .hv-col-pull-#{$i} {
-    position: relative;
-    right: (1 / 24 * $i * 100) * 1%;
-  }
-  .hv-col-push-#{$i} {
-    position: relative;
-    left: (1 / 24 * $i * 100) * 1%;
-  }
-}
-```
-
-5. HvCol 根据不同的分辨率生成 24 栅格样式
-
-```scss
-@media only screen and (max-width: 768px) {
-  @for $i from 0 through 24 {
-    .hv-col-xs-#{$i} {
-      width: (1 / 24 * $i * 100) * 1%;
-    }
-    .hv-col-offset-xs-#{$i} {
-      margin-left: (1 / 24 * $i * 100) * 1%;
-    }
-    .hv-col-pull-xs-#{$i} {
-      position: relative;
-      right: (1 / 24 * $i * 100) * 1%;
-    }
-    .hv-col-push-xs-#{$i} {
-      position: relative;
-      left: (1 / 24 * $i * 100) * 1%;
-    }
-  }
-}
-```
-
-6. HvRow
+1. 用方括号括起来的`JavaScript`表达式作为一个指令的参数
+2. `attributeName`，其值为`href`，那么这个绑定将等价于`v-bind:href`
+3. 当`eventName`的值为`focus`时，`v-on:[eventName]`将等价于`v-on:focus`
+4. 对动态参数的值的约束 动态参数预期会求出一个字符串，异常情况下值为`null`。这个特殊的`null`值可以被显性地用于移除绑定。任何其它非字符串类型的值都将会触发一个警告。
+5. 对动态参数表达式的约束 动态参数表达式有一些语法约束，因为某些字符，如空格和引号，放在`HTML attribute`名里是无效的`DOM`中使用模板时 (直接在一个`HTML`文件里撰写模板)，还需要避免使用大写字符来命名键名，因为浏览器会把`attribute`名全部强制转为小写
 
 ```html
-<script>
-  export default {
-    name: "HvRow",
-    componentName: "HvRow",
-    props: {
-      tag: { type: String, default: "div" },
-      gutter: Number,
-      type: String,
-      justify: { type: String, default: "start" },
-      align: { type: String, default: "top" }
-    },
-    computed: {
-      style() {
-        const css = {};
-        if (this.gutter) {
-          css.marginLeft = `-${this.gutter / 2}px`;
-          css.marginRight = css.marginLeft;
-        }
-        return css;
-      }
-    },
-    render(h) {
-      return h(
-        this.tag,
-        {
-          class: [
-            "hv-row",
-            this.justify !== "start" ? `hv-row--justify-${this.justify}` : "",
-            this.align !== "top" ? `hv-row--align-${this.align}` : "",
-            { "hv-row--flex": this.type === "flex" }
-          ],
-          style: this.style
-        },
-        this.$slots.default
-      );
-    }
-  };
-</script>
-<style lang="scss" scoped>
-  .hv-row {
-    position: relative;
-    box-sizing: border-box;
-
-    &::before,
-    &::after {
-      display: table;
-      content: "";
-    }
-
-    &::after {
-      clear: both;
-    }
-  }
-
-  .hv-row--flex {
-    display: flex;
-
-    &:before,
-    &:after {
-      display: none;
-    }
-  }
-
-  .hv-row--justify-start {
-    justify-content: flex-start;
-  }
-
-  .hv-row--justify-center {
-    justify-content: center;
-  }
-
-  .hv-row--justify-end {
-    justify-content: flex-end;
-  }
-
-  .hv-row--justify-end {
-    justify-content: flex-end;
-  }
-
-  .hv-row--justify-space-between {
-    justify-content: space-between;
-  }
-
-  .hv-row--justify-space-around {
-    justify-content: space-around;
-  }
-
-  .hv-row--align-top {
-    align-items: flex-start;
-  }
-
-  .hv-row--align-middle {
-    align-items: center;
-  }
-
-  .hv-row--align-bottom {
-    align-items: flex-end;
-  }
-</style>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-6">
+  <!--
+注意，参数表达式的写法存在一些约束，如之后的“对动态参数表达式的约束”章节所述。
+-->
+  <a v-bind:[attributeName]="url"... </a>
+  <a v-on:[eventName]="doSomething"... </a>
+  <!-- 这会触发一个编译警告 -->
+<a v-bind:['foo' + bar]="value"... </a>
+<!--
+在 DOM 中使用模板时这段代码会被转换为`v-bind:[someattr]`。
+除非在实例中有一个名为“someattr”的 property，否则代码不会工作。
+-->
+<a v-bind:[someAttr]="value"... </a>
+</div>
 ```
 
-7. HvCol
-
-```html
-<script>
-  export default {
-    name: "HvCol",
-    props: {
-      span: { type: Number, default: 24 },
-      tag: { type: String, default: "div" },
-      offset: Number,
-      pull: Number,
-      push: Number,
-      xs: [Number, Object],
-      sm: [Number, Object],
-      md: [Number, Object],
-      lg: [Number, Object],
-      xl: [Number, Object]
-    },
-    computed: {
-      gutter() {
-        let parent = this.$parent;
-        while (parent && parent.$options.componentName !== "HvRow") {
-          parent = parent.$parent;
-        }
-        return parent ? parent.gutter : 0;
-      }
-    },
-    render(h) {
-      let classList = [];
-      let style = {};
-      if (this.gutter) {
-        style.paddingLeft = this.gutter / 2 + "px";
-        style.paddingRight = style.paddingLeft;
-      }
-      ["span", "offset", "pull", "push"].forEach(prop => {
-        if (this[prop] || this[prop] === 0) {
-          classList.push(
-            prop !== "span"
-              ? `hv-col-${prop}-${this[prop]}`
-              : `hv-col-${this[prop]}`
-          );
-        }
-      });
-      ["xs", "sm", "md", "lg", "xl"].forEach(size => {
-        if (typeof this[size] === "number") {
-          classList.push(`hv-col-${size}-${this[size]}`);
-          return;
-        }
-        if (typeof this[size] === "object") {
-          let props = this[size];
-          Object.keys(props).forEach(prop => {
-            classList.push(
-              prop !== "span"
-                ? `hv-col-${size}-${prop}-${props[prop]}`
-                : `hv-col-${size}-${props[prop]}`
-            );
-          });
-        }
-      });
-      return h(
-        this.tag,
-        {
-          class: ["hv-col", classList],
-          style
-        },
-        this.$slots.default
-      );
-    }
-  };
-</script>
-<style lang="scss" scoped>
-  [class*="hv-col-"] {
-    float: left;
-    box-sizing: border-box;
-  }
-
-  .hv-col-0 {
-    display: none;
-  }
-
-  @for $i from 0 through 24 {
-    .hv-col-#{$i} {
-      width: (1 / 24 * $i * 100) * 1%;
-    }
-
-    .hv-col-offset-#{$i} {
-      margin-left: (1 / 24 * $i * 100) * 1%;
-    }
-
-    .hv-col-pull-#{$i} {
-      position: relative;
-      right: (1 / 24 * $i * 100) * 1%;
-    }
-
-    .hv-col-push-#{$i} {
-      position: relative;
-      left: (1 / 24 * $i * 100) * 1%;
+```javascript
+let app6 = new Vue({
+  el: "#app-6",
+  data: {
+    url: "www.baidu.com",
+    attributename: "href", // 这边只能全部小写要不然会编译报错
+    eventname: "click", // 这边只能全部小写要不然会编译报错
+    someattr: "href" // 这边只能全部小写要不然会编译报错
+  },
+  methods: {
+    doSomething: function() {
+      console.log("百度失败");
     }
   }
-
-  @media only screen and (max-width: 768px) {
-    @for $i from 0 through 24 {
-      .hv-col-xs-#{$i} {
-        width: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-offset-xs-#{$i} {
-        margin-left: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-pull-xs-#{$i} {
-        position: relative;
-        right: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-push-xs-#{$i} {
-        position: relative;
-        left: (1 / 24 * $i * 100) * 1%;
-      }
-    }
-  }
-
-  @media only screen and (min-width: 768px) {
-    @for $i from 0 through 24 {
-      .hv-col-sm-#{$i} {
-        width: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-offset-sm-#{$i} {
-        margin-left: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-pull-sm-#{$i} {
-        position: relative;
-        right: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-push-sm-#{$i} {
-        position: relative;
-        left: (1 / 24 * $i * 100) * 1%;
-      }
-    }
-  }
-
-  @media only screen and (min-width: 992px) {
-    @for $i from 0 through 24 {
-      .hv-col-md-#{$i} {
-        width: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-offset-md-#{$i} {
-        margin-left: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-pull-md-#{$i} {
-        position: relative;
-        right: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-push-md-#{$i} {
-        position: relative;
-        left: (1 / 24 * $i * 100) * 1%;
-      }
-    }
-  }
-
-  @media only screen and (min-width: 1200px) {
-    @for $i from 0 through 24 {
-      .hv-col-lg-#{$i} {
-        width: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-offset-lg-#{$i} {
-        margin-left: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-pull-lg-#{$i} {
-        position: relative;
-        right: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-push-lg-#{$i} {
-        position: relative;
-        left: (1 / 24 * $i * 100) * 1%;
-      }
-    }
-  }
-
-  @media only screen and (min-width: 1920px) {
-    @for $i from 0 through 24 {
-      .hv-col-xl-#{$i} {
-        width: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-offset-xl-#{$i} {
-        margin-left: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-pull-xl-#{$i} {
-        position: relative;
-        right: (1 / 24 * $i * 100) * 1%;
-      }
-
-      .hv-col-push-xl-#{$i} {
-        position: relative;
-        left: (1 / 24 * $i * 100) * 1%;
-      }
-    }
-  }
-</style>
+});
 ```
-
-8. 效果查看 [https://huang7000.github.io/hv-web-ui/#/grid](https://huang7000.github.io/hv-web-ui/#/grid)
 
 :::
 
-:::snippet 代码下载
+:::snippet 修饰符
 
-项目地址：[https://github.com/huang7000/hv-web-ui](https://github.com/huang7000/hv-web-ui)
+1. 修饰符 (`Modifiers`) 是以半角句号 . 指明的特殊后缀，用于指出一个指令应该以特殊方式绑定。
+2. `.prevent`修饰符告诉`v-on`指令对于触发的事件调用`event.preventDefault()`
 
-当前版本：[https://github.com/huang7000/hv-web-ui/releases/tag/v0.2.0](https://github.com/huang7000/hv-web-ui/releases/tag/v0.2.0)
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<form v-on:submit.prevent="onSubmit" id="app-7">
+  ...
+  <button type="submit">表单提交</button>
+</form>
+```
+
+```javascript
+let app7 = new Vue({
+  el: "#app-7",
+  data: {},
+  methods: {
+    onSubmit: function() {
+      console.log("表单提交前出发事件");
+    }
+  }
+});
+```
+
+:::
+
+:::snippet 缩写
+`Vue`为`v-bind`和`v-on`这两个最常用的指令，提供了特定简写
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="app-8">
+  <!-- 完整语法 -->
+  <a v-bind:href="url">...</a>
+  <!-- 缩写 -->
+  <a :href="url">...</a>
+  <!-- 完整语法 -->
+  <a v-on:click="doSomething">...</a>
+  <!-- 缩写 -->
+  <a @click="doSomething">...</a>
+</div>
+```
+
+```javascript
+let app8 = new Vue({
+  el: "#app-8",
+  data: {
+    url: "www.baidu.com"
+  },
+  methods: {
+    doSomething: function() {
+      console.log("a标签点击事件");
+    }
+  }
+});
+```
 
 :::
