--- a/src/notes/01html/03.md
+++ b/src/notes/01html/03.md
@@ -1,29 +1,225 @@
 :::snippet HTML 全局属性
 
-| 标签      | 描述                                     |
-| --------- | ---------------------------------------- |
-| `<!DOCTYPE>`     | 规定元素的类名（classname）              |
+| 属性        | 描述                                     |
+| ----------- | ---------------------------------------- |
 | `id`        | 规定元素的唯一 id                        |
 | `lang`      | 设置元素中内容的语言代码。               |
 | `style`     | 规定元素的行内样式（inline style）       |
 | `title`     | 规定元素的额外信息（可在工具提示中显示） |
 | `accesskey` | 设置访问元素的键盘快捷键。               |
 | `dir`       | 设置元素中内容的文本方向。               |
-| `tabindex` | 设置元素的 Tab 键控制次序。              |
+| `tabindex`  | 设置元素的 Tab 键控制次序。              |
+
+:::
+
+:::snippet accesskey
+
+```html
+<a href="//www.runoob.com/html/html-tutorial.html" accesskey="h">HTML 教程</a
+><br />
+<a href="//www.runoob.com/css/css-tutorial.html" accesskey="c">CSS 教程</a>
+<p>accesskey 属性规定了激活元素的快捷键。</p>
+<p><strong>注意：</strong> 不同浏览器使用的快捷键方法不同：</p>
+<ul>
+  <li>IE, Chrome, Safari, Opera 15+: [ALT] + <em>accesskey</em></li>
+  <li>Opera prior version 15: [SHIFT] [ESC] + <em>accesskey</em></li>
+  <li>Firefox: [ALT] [SHIFT] + <em>accesskey</em></li>
+</ul>
+```
+
+:::
+
+:::snippet class
+
+```html
+<h1 class="intro">标题 1</h1>
+```
+
+```css
+h1.intro {
+  color: blue;
+}
+```
+
+:::
+
+:::snippet dir(ltr:默认,从左向右的文本方向。rtl)
+
+```html
+<bdo dir="rtl">文本方向从右到左!</bdo>
+```
+
+:::
+
+:::snippet id
+
+```html
+<h1 id="intro">标题 1</h1>
+```
+
+```css
+#intro {
+  color: red;
+}
+```
+
+:::
+
+:::snippet lang
+
+```html
+<p>这是一个段落。</p>
+<p lang="en">english</p>
+```
+
+:::
+
+:::snippet style
+
+```html
+<h1 style="color:blue;text-align:center">这是一个标题</h1>
+```
+
+:::
+
+:::snippet title
+
+```html
+<p><abbr title="世界卫生组织">WHO</abbr> 成立于 1948。</p>
+<p title="菜鸟教程">菜鸟教程</p>
+```
+
+:::
+
+:::snippet tabindex
+
+```html
+<a href="//www.runoob.com//" tabindex="2"> runoob.com 菜鸟教程</a><br />
+<a href="//www.google.com/" tabindex="1">Google</a><br />
+<a href="//www.microsoft.com/" tabindex="3">Microsoft</a>
+```
 
 :::
 
 :::snippet HTML5 全局属性
 
-| 标签            | 描述                                                       |
-| --------------- | ---------------------------------------------------------- |
+| 属性              | 描述                                                       |
+| ----------------- | ---------------------------------------------------------- |
 | `contenteditable` | 规定是否可编辑元素的内容。                                 |
 | `contextmenu`     | 指定一个元素的上下文菜单。当用户右击该元素，出现上下文菜单 |
 | `data-*`          | 用于存储页面的自定义数据                                   |
 | `draggable`       | 指定某个元素是否可以拖动                                   |
 | `dropzone`        | 指定是否将数据复制，移动，或链接，或删除                   |
-| `hidden`          | 对元素进行隐藏。                            |
+| `hidden`          | 对元素进行隐藏。                                           |
 | `spellcheck`      | 检测元素是否拼写错误                                       |
 | `translate`       | 指定是否一个元素的值在页面载入时是否需要翻译               |
+
+:::
+
+:::snippet contenteditable
+
+```html
+<p contenteditable="true">这是一个可编辑段落。</p>
+```
+
+:::
+
+:::snippet `data-*`
+
+```html
+<p>点击一个物种，看看它是什么类型：</p>
+<ul>
+  <li onclick="showDetails(this)" id="owl" data-animal-type="bird">Owl</li>
+  <li onclick="showDetails(this)" id="salmon" data-animal-type="fish">
+    Salmon
+  </li>
+</ul>
+```
+
+```javascript
+function showDetails(animal) {
+  var animalType = animal.getAttribute("data-animal-type");
+  alert("The " + animal.innerHTML + " is a " + animalType + ".");
+}
+```
+
+:::
+
+:::snippet draggable
+
+```html
+<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<br />
+<p id="drag1" draggable="true" ondragstart="drag(event)">
+  这是一段可移动的段落。请把该段落拖入上面的矩形。
+</p>
+```
+
+```javascript
+function allowDrop(ev) {
+  ev.preventDefault();
+}
+function drag(ev) {
+  ev.dataTransfer.setData("Text", ev.target.id);
+}
+function drop(ev) {
+  var data = ev.dataTransfer.getData("Text");
+  ev.target.appendChild(document.getElementById(data));
+  ev.preventDefault();
+}
+```
+
+:::
+
+:::snippet hidden
+
+```html
+<p hidden="hidden">这是一段隐藏的段落。</p>
+<p>这是一段可见的段落。</p>
+```
+
+:::
+
+:::snippet spellcheck
+
+```html
+<p contenteditable="true" spellcheck="true">
+  这是可编辑的段落。请试着编辑文本。
+</p>
+
+First name: <input type="text" name="fname" spellcheck="true" />
+
+<p>
+  <strong>注意：</strong> Internet Explorer 9 及更早 IE 版本不支持 spellcheck
+  属性。
+</p>
+```
+
+:::
+
+:::snippet 没有主流浏览器支持
+
+没有主流浏览器支持 dropzone 属性。
+
+```html
+<div dropzone="copy"></div>
+```
+
+没有主流浏览器支持 translate 属性。
+
+```html
+<p translate="no">这个段落不能翻译。</p>
+<p>这个段落可以被翻译</p>
+```
+
+目前只有 Firefox 浏览器支持 contextmenu 属性。
+
+```html
+<p contextmenu="supermenu">本段落拥有一个名为 "supermenu" 的上下文菜单。这个菜单会在用户右键单击该段落时出现。</p>
+<menu id="supermenu">
+  <command label="Step 1: Write Tutorial" onclick="doSomething()">
+  <command label="Step 2: Edit Tutorial" onclick="doSomethingElse()">
+</menu>
+```
 
 :::
